# acp-sdk

./: .gitignore  .gitmodules  .spdx_header  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  MAINTAINERS.md  Makefile  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json
.github/: CODEOWNERS  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: jekyll-gh-pages.yml  pypi.yml  run_check.yml
acp-sdk/: Makefile  pyproject.toml
acp-sdk/acp_sdk/: __init__.py  __main__.py
acp-sdk/acp_sdk/acp-spec/: openapi.yml
acp-sdk/acp_sdk/descriptor/: generator.py  validator.py
acp-sdk/acp_sdk/manifest/: exceptions.py  generator.py  validator.py
acp-sdk/acp_sdk/models/: __init__.py  models.py
acp-sdk/acp_sdk/scripts/: create_acp_client.sh
acp-sdk/acp_sdk/v0/: __init__.py  configuration.py
acp-sdk/acp_sdk/v0/acp_async_client/: api_client.py  rest.py
acp-sdk/acp_sdk/v0/acp_async_client/api/: __init__.py  agents_api.py  runs_api.py  threads_api.py
acp-sdk/acp_sdk/v0/acp_client/: api_client.py  rest.py
acp-sdk/acp_sdk/v0/acp_client/api/: __init__.py  agents_api.py  runs_api.py  threads_api.py
acp-sdk/acp_sdk/v0/models/: __init__.py  agent.py  agent_acp_descriptor.py  agent_acp_spec.py  agent_capabilities.py  agent_metadata.py  custom_run_result_update.py  run.py  run_create.py  run_output.py  run_output_stream.py  run_result.py  run_search_request.py  stream_event_payload.py
acp-sdk/tests/: test_acp_client.py  test_manifest_validator.py
acp-sdk/tests/sample_descriptors/: Makefile  descriptor_ko_no_interrupts.json  descriptor_ko_thread_support.json  descriptor_ko_value_streaming.json  descriptor_ok.json  descriptor_ok_no_callbacks.json  descriptor_ok_no_callbacks.json.oas.yml  descriptor_ok_no_interrupts.json  descriptor_ok_no_interrupts.json.oas.yml  descriptor_ok_value_streaming.json
acp-sdk/tests/sample_manifests/: Makefile  manifest_ko_value_streaming.json  manifest_no_interrupts_ko.json  manifest_ok.json  manifest_ok.json.oas.yml  manifest_ok_no_callbacks.json  manifest_ok_no_callbacks.json.oas.yml  manifest_ok_no_interrupts.json  manifest_ok_no_interrupts.json.oas.yml  manifest_ok_no_streaming.json  manifest_ok_no_streaming.json.oas.yml  manifest_ok_no_threads.json  manifest_ok_no_threads.json.oas.yml  manifest_ok_value_streaming.json  manifest_ok_value_streaming.json.oas.yml  manifest_thread_support_ko.json  oas.manifest_ok.yml
acp_sdk/: __init__.py  __main__.py
acp_sdk/acp_v0/: __init__.py  configuration.py  spec_version.py
acp_sdk/acp_v0/async_client/: api_client.py  rest.py
acp_sdk/acp_v0/models/: agent.py  (+13 more)
acp_sdk/descriptor/: exceptions.py  generator.py
acp_sdk/models/: __init__.py
agntcy_acp/: __init__.py  __main__.py  client.py  server_side_events.py
agntcy_acp/descriptor/: generator.py  validator.py
agntcy_acp/langgraph/: acp_node.py  api_bridge.py
agntcy_acp/models/: __init__.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  _coverpage.md  _navbar.md  building.md  index.html  usage.md
docs/html/: .buildinfo  .buildinfo.bak  agntcy_acp.acp_v0.html  agntcy_acp.acp_v0.models.html  agntcy_acp.agws_v0.html  agntcy_acp.html  agntcy_acp.langgraph.html  agntcy_acp.manifest.html  agntcy_acp.models.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/sphinx/: Makefile  agntcy_acp.manifest.rst  agntcy_acp.models.rst  conf.py  index.rst
examples/: README.md
examples/echo-agent/: README.md  pyproject.toml  test.py
examples/echo-agent/deploy/: echo-agent-manifest.json  echo-agent-wfsm-config.yaml  echo-agent.json
examples/echo-agent/echo_agent/: __main__.py  agent.py  langgraph.py  main.py  state.py
examples/email_reviewer/: README.md  pyproject.toml
examples/interrupt/: README.md  pyproject.toml
examples/interrupt-li/: README.md  pyproject.toml
examples/interrupt-li/deploy/: config.yaml  manifest.json
examples/interrupt-li/interrupt_li/: __init__.py  interrupt.py
examples/interrupt/deploy/: manifest.json
examples/interrupt/interrupt/: interrupt.py
examples/mailcomposer/: README.md  main.py  pyproject.toml
examples/marketing-campaign/: README.md  pyproject.toml
examples/marketing-campaign/deploy/: email_reviewer.json  marketing-campaign.json  marketing_campaign_example.yaml
examples/marketing-campaign/src/marketing_campaign/: __main__.py  app.py  generate_manifest.py  mailcomposer.py  main_acp_client.py  state.py
scripts/: check-models.sh  generate_model_autodoc.py  generate_model_autodoc.sh  openapi_generate_client.sh
templates/: api_client.mustache  configuration.mustache  model_anyof.mustache  model_generic.mustache  model_oneof.mustache  rest.mustache
templates/asyncio/: rest.mustache
test-client/: .env.example  README.md  pyproject.toml
test-client/acp_test/: __main__.py  client.py  main.py  output.json  types.py
test-client/examples/: echo_agent_stateful.yaml  echo_agent_stateless.yaml  echo_agent_stateless_streaming.yaml  echo_agent_test.yaml
tests/: conftest.py  test_acp_async_client.py  test_acp_client.py  test_acp_client_with_interrupt.py  test_configuration.py  test_descriptor_validator.py  test_langgraph.py  test_manifest_validator.py  test_model_generator.py  test_oas_generator.py
tests/sample_descriptors/: Makefile  descriptor_ok_no_streaming.json  descriptor_ok_no_threads.json.oas.yml
tests/test_samples/: Makefile  descriptor_ko_value_streaming.json  descriptor_ok.json  descriptor_ok.json.oas.yml  descriptor_ok_no_callbacks.json.models.py  descriptor_ok_no_callbacks.json.oas.yml  descriptor_ok_no_interrupts.json.oas.yml  descriptor_ok_no_streaming.json.oas.yml  descriptor_ok_no_threads.json  descriptor_ok_no_threads.json.oas.yml  descriptor_ok_value_streaming.json  descriptor_ok_value_streaming.json.oas.yml  manifest_ok_mailcomposer.json  manifest_ok_mailcomposer.json.models.py  manifest_ok_mailcomposer.json.oas.yml  manifest_ok_marketing-campaign.json  manifest_ok_marketing-campaign.json.models.py  manifest_ok_marketing-campaign.json.oas.yml
(+114 files in other folders)
