[tool.poetry]
name = "acp-sdk"
version = "0.1.0"
description = ""
authors = ["Alessandro Duminuco <aduminuc@cisco.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.8"
openapi-spec-validator = "^0.7.1"
datamodel-code-generator = "^0.25.6"
# Inherited from generated openapi model
urllib3 = ">= 1.25.3, < 3.0.0"
python-dateutil = ">= 2.8.2"
pydantic = ">= 2"
typing-extensions = ">= 4.7.1"
aiohttp = ">= 3.8.4"
aiohttp-retry = ">= 2.8.3"

[tool.poetry.group.generate_server.dependencies]
fastapi-code-generator = "^0.5.2"

[tool.poetry.group.test.dependencies]
pytest = "*"
deepdiff = "^8.1.1"
pytest-asyncio = "^0.23.5"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.poetry.scripts]
acp = "acp_sdk.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
