[tool.poetry]
name = "acp-sdk"
version = "0.1.0"
description = ""
authors = ["Alessandro Duminuco <aduminuc@cisco.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.8"
openapi-spec-validator = "^0.7.1"
fastapi-code-generator = "^0.5.2"

[tool.poetry.group.test.dependencies]
pytest = "*"
deepdiff = "^8.1.1"

[tool.poetry.scripts]
acp = "acp_sdk.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
