[project]
name = "acp-test"
version = "0.2.1"
license-files = [ "LICENSE" ]
description = "ACP test client"
readme = "README.md"
authors = [
    { name = "AGNTCY Internet of Agents Collective", email = "pypi@agntcy.io" },
]
maintainers = [
    { name = "AGNTCY Internet of Agents Collective", email = "pypi@agntcy.io" },
]
requires-python = ">=3.9.0, <4.0"
dependencies = [
    "click >= 8.1",
    "pydantic >= 2",
    "agntcy_acp @ {root:uri}/..",
    "pyyaml >= 6.0",
    "python-dotenv >= 1.1",
    "jinja2 >= 3.1",
    "deepdiff >= 8.4",
]

[tool.scripts]
cli = "acp_test.main:execute_test_file"

[tool.ruff]
lint.select = ["E", "F", "I", "TID251"]
lint.ignore = ["E501"]
line-length = 88
indent-width = 4
extend-include = ["*.ipynb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.mypy]
disallow_untyped_defs = true
explicit_package_bases = true
warn_no_return = false
warn_unused_ignores = true
warn_redundant_casts = true
allow_redefinition = true
# https://mypy.readthedocs.io/en/stable/config_file.html
disable_error_code = "typeddict-item, return-value, override, has-type"

[tool.hatch.metadata]
# allow build to include local agntcy_acp package
allow-direct-references = true

[tool.hatch.build]
dev-mode-dirs = ["../agntcy_acp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"