[project]
name = "echo_agent"
version = "0.2.0"
license = "Apache-2.0"
description = "Echoes input to output."
readme = "README.md"
authors = [
    { name = "AGNTCY Internet of Agents Collective", email = "pypi@agntcy.io" },
]
maintainers = [
    { name = "AGNTCY Internet of Agents Collective", email = "pypi@agntcy.io" },
]

[tool.poetry.dependencies]
python = ">=3.9.0,<4.0"
langgraph = "^0.3.5"
pydantic = ">= 2"
click = "^8.1.8"

[tool.poetry.group.sanity.dependencies]
mypy = "^1.10.0"
ruff = "^0.4.6"

[tool.poetry.scripts]
echo_agent = "echo_agent.__main__:echo_server_agent"

[tool.ruff]
lint.select = ["E", "F", "I", "TID251"]
lint.ignore = ["E501"]
line-length = 88
indent-width = 4
extend-include = ["*.ipynb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.mypy]
disallow_untyped_defs = true
explicit_package_bases = true
warn_no_return = false
warn_unused_ignores = true
warn_redundant_casts = true
allow_redefinition = true
# https://mypy.readthedocs.io/en/stable/config_file.html
disable_error_code = "typeddict-item, return-value, override, has-type"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
