[project]
name = "echo_agent"
version = "0.3.0"
license-files = [ "LICENSE" ]
description = "Echoes input to output."
readme = "README.md"
authors = [
    { name = "AGNTCY Internet of Agents Collective", email = "pypi@agntcy.io" },
]
maintainers = [
    { name = "AGNTCY Internet of Agents Collective", email = "pypi@agntcy.io" },
]
requires-python = ">=3.9.0, <4.0"
dependencies = [
    "langgraph >= 0.3.5",
    "pydantic >= 2",
    "click >= 8.1.8",
]

[project.scripts]
echo-agent = "echo_agent.main:echo_server_agent"

[tool.ruff]
lint.select = ["E", "F", "I", "TID251"]
lint.ignore = ["E501"]
line-length = 88
indent-width = 4
extend-include = ["*.ipynb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.mypy]
disallow_untyped_defs = true
explicit_package_bases = true
warn_no_return = false
warn_unused_ignores = true
warn_redundant_casts = true
allow_redefinition = true
# https://mypy.readthedocs.io/en/stable/config_file.html
disable_error_code = "typeddict-item, return-value, override, has-type"

[tool.uv.build-backend]
source-exclude = [
    "/deploy"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"