[project]
name = "interrupt"
version = "0.1.0"
description = "Example Interrupt (Human-In-The-Loop) LangGraph Agent"
authors = [
    {name = "Marco Trinelli ", email = "mtrinell@cisco.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<4.0"
langchain = "^0.3.17"
langgraph = "^0.3.5"
langchain-openai = "^0.3.3"
jinja2 = "^3.1.5"
python-dotenv = "^1.0.1"
ruff = "^0.11.0"


[tool.poetry.group.manifest.dependencies]
agntcy_acp = "v0.1.0a2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = [ "E", "F", "I", "TID251"]
lint.ignore = [ "E501" ]
indent-width = 4
exclude = ["src/agent_workflow_server/generated/*"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"