[project]
name = "marketing-campaign"
version = "0.1.0"
description = ""
authors = [
    {name = "Alessandro Duminuco",email = "aduminuc@cisco.com"}
]
readme = "README.md"
requires-python =  ">=3.9.0,<4.0"
dynamic = [ "dependencies" ]

[tool.poetry.dependencies]
agntcy_acp = "v0.1.0a0.dev1"
python-dotenv = "^1.0.1"
langgraph = "^0.3.5"
langchain-openai = "^0.3.8"
langchain = "^0.3.20"


[tool.poetry]
packages = [{include = "marketing_campaign", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
